--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
         
         <!--
         <h3>Skills & Expertise</h3>
-          <p><strong>Languages:</strong> Python, SQL (BigQuery, MySQL)<br>
+          <p><strong>Languages:</strong> Python, C++, SQL (BigQuery, MySQL)<br>
               <strong>Tools:</strong> Linux, Windows, SIEM (Splunk), Network Protocol Analyzers (WireShark, Tcpdump, Nmap), IDS/IPS (Suricata)<br>
               <strong>Security Practices:</strong> Information Security, Network Security (NDR), Vulnerability Assessment, Threat Analysis (IDS/IPS), Log Analysis, Security Frameworks and Controls (NIST)<br>
               <strong>Software Platforms:</strong> Google Workspace, Microsoft Suite, Slack, ChatGPT<br>
